vbnc/vbnc/tests/Errors/30530.vb
Module ArgumentTypeInference
    Function a(ByVal a As Integer) As Integer

    End Function
End Module